<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:text="@string/sb_main_info"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/sb_title"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/sb_editor"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <include layout="@layout/author_layout" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_categ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <include layout="@layout/categ_layout" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/sb_data"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/descrizione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/sb_description"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
