<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BookPackage.AddBook"
    tools:showIn="@layout/app_bar_add_book">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/scan1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/scan1"
                android:textAlignment="center"
                android:textSize="@dimen/label" />

            <Button
                android:id="@+id/insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/scan1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/insert"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_text_size" />

            <View
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/insert"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/scan2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@id/line1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/scan2"
                android:textAlignment="center"
                android:textSize="@dimen/label" />

            <ImageButton
                android:id="@+id/b_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/et_isbn"
                android:layout_below="@id/scan2"
                android:layout_marginEnd="16dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/selectImage"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <EditText
                android:id="@+id/et_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/scan2"
                android:layout_centerInParent="false"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/b_next"
                android:ems="10"
                android:hint="ISBN"
                android:inputType="number" />

            <View
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_below="@id/et_isbn"
                android:background="@color/light_gray" />

            <TextView
                android:id="@+id/scan3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/line2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/scan3"
                android:textSize="@dimen/label" />

            <Button
                android:id="@+id/b_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scan3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/scan"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_text_size" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>