<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/bp_owner"
            android:textSize="18sp" />-->

        <ProgressBar
            android:id="@+id/progress_bar_request"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/bp_editore"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_photo"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/notFound"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/bp_autore"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/autore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_photo"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/notFound"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/bp_categ"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/categorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_photo"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/notFound"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bp_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/bp_data"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_photo"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/notFound"
            android:textSize="16sp" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/rounded_photo"
            tools:context=".BookPackage.ShowBook" />

        <TextView
            android:id="@+id/bp_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/bp_descr"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descrizione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_photo"
            android:padding="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/notFound"
            android:textSize="16sp" />

        <!--<TextView
            android:id="@+id/owner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_photo"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/notFound"
            android:textSize="16sp" />-->


    </LinearLayout>
</LinearLayout>
