<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="Username" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/name"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="CAP"
            />

        <EditText
            android:id="@+id/cap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_corner"
            android:hint="CAP"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/country"
            />

        <Spinner
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_corner"
            android:hint="@string/country"
            android:paddingBottom="3dp"
            android:paddingRight="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/bio"
            />

        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/bio"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />


    </LinearLayout>
</LinearLayout>
